<resources>
    <string name="app_name">MSC</string>
    <string name="tao_tai_khoan">No Account yet? Create one</string>
    <string name="dang_nhap">Login</string>
    <string name="name">name</string>
    <string name="pass">password</string>
    <string name="my_music">My Music</string>
    <string name="bat_hat">Music</string>
    <string name="playlist">Playlist</string>

    <string name="yeu_thich">FavHotorite</string>
    <string name="hot_music"> music</string>
    <string name="singer">Singer</string>
    <string name="charts">Charts</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="album">Album</string>
    <string name="countSong">Bài hát: </string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="link_login">http://192.168.1.8/mvc/api.php</string>
    <string name="music">music</string>
    <string name="type">type</string>
    <string name="Login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">Offline</string>
    <string name="Online">Online</string>
    <string name="chuDe_TheLoai">Chủ đề và thể loại</string>
    <string name="Waiting">Vui lòng chờ</string>
    <string name="progressing">Đang xử lí</string>
    <string name="user">User</string>
    <string name="add_list_like">Thêm vào danh sách yêu thích</string>
    <string name="Download">Tải về</string>
    <string name="status">Status:</string>
    <string name="email">email:</string>
    <string name="logout">Đăng xuất</string>
    <string name="newPassword">Mật khẩu mới</string>
    <string name="presspasword">Nhập mật khẩu</string>
    <string name="NewPassword">Mật khẩu mới</string>
    <string name="RequestPassword">Nhập lại mật khẩu</string>
    <string name="Cancel">Hủy</string>
    <string name="Success">Đồng ý</string>
</resources>
