<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/mnu_item_login"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/dang_nhap" />

        <item
            android:id="@+id/mnu_item_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/setting" />

        <item
            android:id="@+id/mnu_item_about"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/about" />
    </group>

    <item android:title="@string/app_name">

        <menu>
            <item
                android:id="@+id/mnu_item_music"
                android:icon="@drawable/ic_music_note_black_24dp"
                android:title="@string/music" />

            <item
                android:id="@+id/mnu_item_type"
                android:icon="@drawable/ic_album_black_24dp"
                android:title="@string/type" />

            <item
                android:id="@+id/mnu_item_album"
                android:icon="@drawable/ic_album_black_24dp"
                android:title="@string/album" />

            <item
                android:id="@+id/mnu_item_singer"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/singer" />

            <item
                android:id="@+id/mnu_item_charts"
                android:icon="@drawable/ic_format_list_numbered_black_24dp"
                android:title="@string/charts" />
        </menu>

    </item>

=======
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
>>>>>>> finish interface main
</menu>
