<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:backgroundTint="@color/colorWhite"
            app:hintTextAppearance="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_newpass_txt_oldpassword"
                android:inputType="textPassword"
                android:hint="@string/presspasword"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:backgroundTint="@color/colorWhite"
            app:hintTextAppearance="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_newpass_txt_newpassword"
                android:hint="@string/NewPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:backgroundTint="@color/colorWhite"
            app:hintTextAppearance="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/dialog_newpass_txt_request_newpassword"
                android:hint="@string/RequestPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/dialog_newpass_btn_cancel"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/dialog_newpass_btn_ok"
                android:background="?attr/selectableItemBackground"
                android:layout_weight="1"
                android:text="@string/Success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>