<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.quoctuan.msc.view.User.UserActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/user_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:layout_marginTop="50dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:text="@string/email"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/user_email"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorBlack"
                android:text="@string/status"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/uset_img_status"
                android:layout_alignParentRight="true"
                android:src="@drawable/dot_level"
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/user_btn_new_password"
        android:textColor="@color/colorWhite"
        android:text="@string/newPassword"
        android:background="@color/colorGreen"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/user_btn_logout"
        android:layout_margin="10dp"
        android:background="@color/colorRed"
        android:textColor="@color/colorWhite"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
