<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context="com.example.quoctuan.msc.view.Login.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        app:titleTextColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_name"
        app:hintTextAppearance="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_edit_name"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_person"
            android:textColorHint="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/name"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_pass"
        app:hintTextAppearance="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/login_edit_pass"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="17dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_btn_sign_in"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="10dp"
        android:background="#ce3821"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dang_nhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_sign_up"
            android:textAlignment="center"
            android:text="@string/tao_tai_khoan"
            android:layout_marginRight="19dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">
        <View
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
        <TextView
            android:textColor="@android:color/white"
            android:text="or"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>
    </LinearLayout>

</LinearLayout>
