<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:text="@string/my_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.SearchView>
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo_user"
            android:layout_marginRight="20dp"
            android:src="@drawable/login_logo"
            android:layout_width="130dp"
            android:layout_height="130dp" />
        <TextView
            android:id="@+id/txt_name_user"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:layout_toRightOf="@id/logo_user"
            android:text="@string/my_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_toRightOf="@id/logo_user"
            android:layout_below="@id/txt_name_user"
            android:text="90 bài hát"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:background="@android:color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo_baihat"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_logo"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/logo_baihat"
                android:text="@string/bat_hat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:text="85"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_below="@id/logo_baihat"
                android:background="#9b9b9b"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo_baihat2"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_logo"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/logo_baihat2"
                android:text="@string/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:text="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_below="@id/logo_baihat2"
                android:background="#9b9b9b"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo_baihat3"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_logo"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/logo_baihat3"
                android:text="@string/singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:text="23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_below="@id/logo_baihat3"
                android:background="#9b9b9b"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo_baihat4"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_logo"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/logo_baihat4"
                android:text="@string/playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_below="@id/logo_baihat4"
                android:background="#9b9b9b"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/logo_baihat5"
                android:layout_marginRight="10dp"
                android:src="@drawable/login_logo"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@id/logo_baihat5"
                android:text="@string/yeu_thich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="20sp"
                android:layout_alignParentRight="true"
                android:text="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_below="@id/logo_baihat5"
                android:background="#9b9b9b"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>